--- a/ft_server/dockerfile
+++ b/ft_server/dockerfile
@@ -13,9 +13,9 @@ RUN	apt-get update && apt-get install -y \
 	php7.3-fpm
 
 COPY	./srcs/run.sh ./
-COPY	./srcs/default ./tmp
-COPY	./srcs/wp-config.php ./tmp
-COPY	./srcs/config.inc.php ./tmp
+COPY	./srcs/default ./
+COPY	./srcs/wp-config.php ./
+COPY	./srcs/config.inc.php ./
 
 EXPOSE	80 443
 
